# e2box_imu

./: CMakeLists.txt  README.md  package.xml
include/: ebimu9dofv4.h  t_serial.h
include/e2box_imu/: e2box_imu_node.hpp  serial_manager.hpp
launch/: e2box_imu.launch  e2box_imu_9dofv4.launch.py
src/: e2box_imu_node.cpp  ebimu9dofv4.cpp  main.cpp  serial_manager.cpp  t_serial.cpp
